test/fail/internal/expr_after_raise.lly
#[
SyntaxError: Statement(s) after 'raise' will not execute.
    from expr_after_raise.lly:7
]#

raise ValueError::new("")
var v = 10
